mypy_test_output.txt
tsercom/data/remote_data_organizer_unittest.py:78: error: Returning Any from
function declared to return "ThreadPoolExecutor"  [no-any-return]
        return mock_pool
        ^~~~~~~~~~~~~~~~
tsercom/data/remote_data_organizer_unittest.py:88: error: Returning Any from
function declared to return "Client"  [no-any-return]
        return mocker.MagicMock(spec=RemoteDataOrganizer.Client)
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tsercom/data/remote_data_organizer_unittest.py:99: error: Returning Any from
function declared to return "IsRunningTracker"  [no-any-return]
        return mock_tracker_instance
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
Found 3 errors in 1 file (checked 1 source file)
